# stone_scissor_paper

./: game.py  main.py  pyproject.toml  sign.py  validator.py
